[package]
name = "e-imzo-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "E-IMZO client for frontent data "
homepage = "https://github.com/xinux-org"
repository = "https://github.com/xinux-org/e-imzo-rs"
authors = ["Xinux Developers <support@oss.uzinfocom.uz>"]
readme = "README.md"

# Optimize release binary as much as possible
[profile.release]
lto = true
codegen-units = 1
incremental = true
strip = true
opt-level = "z"

[dependencies]
serde = "1.0.219"
serde_json = "1.0"
tungstenite =  { version = "0.21.0", features = ["native-tls"] }
log = "0.4"
chrono = "0.4"
env_logger = "0.11.3"
futures-util = "0.3"
native-tls = "0.2.14"
futures-channel = "0.3.31"
url = "2.5.7"
