[package]
name = "e-imzo"
version = "0.2.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "E-IMZO SDK for easier accessing"
homepage = "https://github.com/rust-lang-uz"
repository = "https://github.com/rust-lang-uz/e-imzo"
authors = ["Xinux Dvelopers <support@oss.uzinfocom.uz>"]
readme = "README.md"
keywords = ["e-imzo", "uzbek"]

# Optimize release binary as much as possible
[profile.release]
lto = true
codegen-units = 1
incremental = true
strip = true
opt-level = "z"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tungstenite =  { version = "0.27.0", features = ["native-tls"] }
log = "0.4"
chrono = "0.4"
env_logger = "0.11.3"
futures-util = "0.3"
native-tls = "0.2.14"
futures-channel = "0.3.31"
url = "2.5.7"
thiserror = "2.0.16"
