[package]
name = "e-imzo"
version = "0.2.6"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "E-IMZO SDK for easier accessing"
homepage = "https://github.com/rust-lang-uz"
repository = "https://github.com/rust-lang-uz/e-imzo"
authors = ["Xinux Dvelopers <support@oss.uzinfocom.uz>"]
readme = "README.md"
keywords = ["e-imzo", "uzbek"]

# Optimize release binary as much as possible
[profile.release]
lto = true
codegen-units = 1
incremental = true
strip = true
opt-level = "z"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tungstenite =  { version = "0.28.0", features = ["native-tls"] }
log = "0.4.29"
chrono = { version = "0.4.43", features = ["serde"]}
env_logger = "0.11.3"
futures-util = "0.3"
native-tls = "0.2.14"
futures-channel = "0.3.31"
url = "2.5.8"
thiserror = "2.0.18"
